<resources>
    <string name="app_name">Bank App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Splash Fragment-->
    <string name="text_title_login_fragment">Banco Digital</string>
    <string name="image_logo">image_logo</string>

    <!--    Generic-->
    <string name="text_name_empty">Dígite seu nome</string>
    <string name="text_email_empty">Dígite seu e-mail</string>
    <string name="text_telefone_empty">Dígite seu telefone</string>
    <string name="text_password_empty">Dígite sua senha</string>
    <string name="error_generic">Ocorreu um erro tente novamente mais tarde</string>

    <!--    Login Fragment-->
    <string name="title_login_fragment">Entrar na conta</string>
    <string name="text_hint_edit_email_login_fragment">Email</string>
    <string name="text_hint_edit_password_login_fragment">Senha</string>
    <string name="text_button_sign_in_login_fragment">Entrar</string>
    <string name="text_forgot_password_login_fragment">Esqueceu a senha?</string>
    <string name="text_continue_social_network_login_fragment"> ou </string>
    <string name="text_email_empty_login_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_login_fragment">Digite sua senha</string>
    <string name="text_button_sign_up_register_fragment">Inscrever-se</string>

    <!--    Recover Fragment-->
    <string name="title_recover_fragment">Digite seu e-mail que te enviaremos um\n link para você alterar sua senha.</string>
    <string name="text_hint_edit_email_recover_fragment">Email</string>
    <string name="text_button_recover_fragment">Recuperar conta</string>
    <string name="text_email_empty_recover_fragment">Digite um e-mail válido</string>
    <string name="text_send_email_success_recover_fragment">Email enviado com sucesso</string>

    <!--    Register Fragment-->
    <string name="title_register_fragment">Criar conta</string>
    <string name="title_phone_invalid_fragment">Dígite um telefone válido</string>
    <string name="text_name_register_fragment">Nome</string>
    <string name="text_edit_hint_name_register_fragment">Digite seu nome</string>
    <string name="text_email_register_fragment">E-mail</string>
    <string name="text_edit_hint_email_register_fragment">Digite seu e-mail</string>
    <string name="text_phone_register_fragment">Telefone</string>
    <string name="text_edit_hint_phone_register_fragment">Digite seu telefone</string>
    <string name="text_password_register_fragment">Senha</string>
    <string name="text_edit_hint_password_register_fragment">Digite sua senha</string>
    <string name="text_confirm_password_register_fragment">Confirme a senha</string>
    <string name="text_edit_hint_confirm_password_register_fragment">Confirme sua senha</string>
    <string name="text_button_register_fragment">Cadastrar</string>

    <!--    Home Fragment-->
    <string name="text_icon_deposit_home_fragment">Depositar</string>
    <string name="text_icon_recharge_home_fragment">Recarga de celular</string>
    <string name="text_icon_extract_home_fragment">Extrato</string>
    <string name="text_icon_transfer_home_fragment">Transferir</string>
    <string name="text_icon_user_home_fragment">Perfil</string>
    <string name="text_title_balance_home_fragment">Saldo Disponível</string>
    <string name="text_activity_six_balance_home_fragment">Últimas 6 atividades</string>
    <string name="text_activity_all_balance_home_fragment">Ver todas</string>
    <string name="text_formated_value">R$ %1$s</string>

    <!--    Deposit Fragment-->
    <string name="title_deposit_fragment">Depositar</string>
    <string name="btn_deposit_fragment">Confirmar</string>
    <string name="text_report_deposit_fragment">Informe o valor a ser depositado.</string>
    <string name="text_amount_deposit_fragment">Valor do depósito.</string>

    <!--    DepositReceipt Fragment-->
    <string name="title_deposit_receipt_fragment">Comprovante</string>
    <string name="btn_deposit_receipt_fragment">Continuar</string>
    <string name="text_title_deposit_receipt_fragment">Seu depósito foi realizado\n com sucesso!</string>
    <string name="text_sub_title_deposit_receipt_fragment">Seu depósito ficará disponível em até 3 dias.</string>
    <string name="text_code_transaction_deposit_receipt_fragment">Código da transação</string>
    <string name="text_date_transaction_deposit_receipt_fragment">Data depósito</string>
    <string name="text_amount_transaction_deposit_receipt_fragment">Valor depósito</string>

<!--    Extract Fragment-->
    <string name="text_title_extract_fragment">Extrato</string>


    <!--    BottomSheet-->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

</resources>