<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presenter.auth.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/title_register_fragment"
                    android:textColor="@color/black" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <TextView
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_name_register_fragment"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edit_name"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:layout_marginTop="4dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/text_edit_hint_name_register_fragment"
                android:drawablePadding="8dp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_email_register_fragment"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edit_email"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:layout_marginTop="4dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/text_edit_hint_email_register_fragment"
                android:drawablePadding="8dp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_phone_register_fragment"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edt_phone"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:layout_marginTop="4dp"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/text_edit_hint_phone_register_fragment"
                android:drawablePadding="8dp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_password_register_fragment"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edt_password_register"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:layout_marginTop="4dp"
                android:inputType="numberPassword"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/text_edit_hint_password_register_fragment"
                android:drawablePadding="8dp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_confirm_password_register_fragment"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edt_confirm"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:layout_marginTop="4dp"
                android:inputType="numberPassword"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/text_edit_hint_confirm_password_register_fragment"
                android:drawablePadding="8dp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="LabelFor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button"
                android:text="@string/text_button_register_fragment"
                android:textAllCaps="true"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:indeterminateTint="@color/color_default"
                android:visibility="invisible"
                tools:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>